@@ -126,7 +126,7 @@ tile.eveniumblock.name=Block of Evenium
 
 tile.xathrock.name=Xathian Rock
 tile.xathstone.name=Xathian Stone
-tile.xathrockbricks.Xathian Rock Bricks
+tile.xathrockbricks.name=Xathian Rock Bricks
 tile.xathcobblerock.name=Xathian Cobblerock
 tile.xathdirt.name=Xathian Dirt
 tile.xathgrass.name=Xathian Grass
